# NETWORK-AI-MVP

./: .gitignore  NEXT_TASK.md  PROJECT_STATUS.md  README.md  pyproject.toml
.codex/rules/: meta.md
docs/: 01_network_management_uiux_design_system_v1.0_20260629.md  02_network_operations_console_practical_layout_v1.0_20260629.md  CODE_REVIEW.md  NETWORK_NMS_CODE_REVIEW_DIRECTIVE.md  REFACTORING_PLAN.md  SESSION_SHUTDOWN_PROTOCOL.md  STEP0_CURRENT_STATE_DISCOVERY.md
docs/checklists/: STEP3_DASHBOARD.md  STEP4_TOPOLOGY.md  STEP5_UPLINK_HEALTH.md  STEP6_ERRDISABLE.md
docs/network/: NETWORK_AI_MVP_HANDOFF.md  TOPOLOGY_TREE_DESIGN_SPEC.md  arista-10g-network-20241030-learning-data.md
inventory/: backbone_neighbors.json  devices.csv  known_risks.json
scripts/: backbone_telnet_readonly.ps1
src/network_ai_mvp/: __init__.py  api.py  audit.py  auth.py  cli.py  correlation.py  credentials.py  diagnostics.py  executor.py  inventory.py  models.py  neighbors.py  observations.py  parsers.py  policy.py  search.py  thresholds.py  write_policy.py
src/network_ai_mvp/collector/: __init__.py  base.py  queue.py  telnet.py
src/network_ai_mvp/services/: change.py  check.py  collection.py  collection_workflow.py  monitoring.py  topology.py
src/network_ai_mvp/static/: app.js  index.html  monitoring.html  monitoring.js  operations.html  styles.css
tests/: test_api.py  test_audit.py  test_change_foundation.py  test_collector_queue.py  test_diagnostics.py  test_executor.py  test_inventory.py  test_neighbors.py  test_observations.py  test_parsers.py  test_policy.py  test_services.py
