[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "network-ai-mvp"
version = "0.1.0"
description = "Read-only AI network management agent MVP foundation"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.111", "httpx>=0.27", "uvicorn>=0.30"]

[project.scripts]
network-ai-mvp = "network_ai_mvp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
network_ai_mvp = ["static/*.html", "static/*.css", "static/*.js"]
